# ChangeLog for app-officeext/ooofbtools
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-officeext/ooofbtools/ChangeLog,v 1.23 2015/05/13 10:06:33 pinkbyte Exp $

  13 May 2015; Sergey Popov <pinkbyte@gentoo.org> -ooofbtools-2.30.ebuild,
  -ooofbtools-2.31.ebuild:
  Drop old

  13 May 2015; Agostino Sarubbo <ago@gentoo.org> ooofbtools-2.34.ebuild:
  Stable for x86, wrt bug #548662

  08 May 2015; Agostino Sarubbo <ago@gentoo.org> ooofbtools-2.34.ebuild:
  Stable for amd64, wrt bug #548662

*ooofbtools-2.34 (01 Apr 2015)

  01 Apr 2015; Alexander Vershilov <qnikst@gentoo.org> +ooofbtools-2.34.ebuild,
  -ooofbtools-2.33.ebuild:
  bump up to 2.34

*ooofbtools-2.33 (24 Mar 2015)

  24 Mar 2015; Alexander Vershilov <qnikst@gentoo.org> +ooofbtools-2.33.ebuild,
  -ooofbtools-2.32.ebuild:
  app-officeext/ooofbtools: bump up to 2.33

  25 Feb 2015; Agostino Sarubbo <ago@gentoo.org> ooofbtools-2.31.ebuild:
  Stable for x86, wrt bug #540268

  19 Feb 2015; Agostino Sarubbo <ago@gentoo.org> ooofbtools-2.31.ebuild:
  Stable for amd64, wrt bug #540268

*ooofbtools-2.32 (08 Feb 2015)

  08 Feb 2015; Andreas K. Huettel <dilfridge@gentoo.org>
  +ooofbtools-2.32.ebuild:
  Version bump, bug 538910

*ooofbtools-2.31 (14 Jan 2015)

  14 Jan 2015; Sergey Popov <pinkbyte@gentoo.org> -ooofbtools-2.26-r1.ebuild,
  +ooofbtools-2.31.ebuild:
  Version bump, drop old

  28 Dec 2014; Agostino Sarubbo <ago@gentoo.org> ooofbtools-2.30.ebuild:
  Stable for x86, wrt bug #529938

  27 Dec 2014; Agostino Sarubbo <ago@gentoo.org> ooofbtools-2.30.ebuild:
  Stable for amd64, wrt bug #529938

*ooofbtools-2.30 (08 Oct 2014)

  08 Oct 2014; Sergey Popov <pinkbyte@gentoo.org> +ooofbtools-2.30.ebuild:
  Version bump, wrt bug #508582

  08 Oct 2014; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
  Add proxy maintainers and new maintainer to metadata

  08 Oct 2014; Sergey Popov <pinkbyte@gentoo.org> -ooofbtools-2.12.ebuild:
  Drop old
